@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-10T08:13:32Z",
-  "count_outdated" : 85,
-  "uniques_outdated" : 72,
+  "timestamp" : "2022-10-12T08:08:08Z",
+  "count_outdated" : 86,
+  "uniques_outdated" : 73,
   "count" : 90,
   "uniques" : 77,
   "clones" : [
-    {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 1,
