@@ -1,12 +1,7 @@
 {
-  "count": 5,
+  "count": 4,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 1,
